# RustStuff

./: Cargo.toml  README.md
blockchain-rust/: Cargo.toml  README.md
blockchain-rust/src/: main.rs
ml-api-rust/: Cargo.toml  request.http
ml-api-rust/migrations/: 0001_init.sql
ml-api-rust/src/: handlers.rs  main.rs  models.rs
optim-rust/: Cargo.toml
optim-rust/knapsack-genetic/: Cargo.toml
optim-rust/knapsack-genetic/src/: main.rs
optim-rust/knapsack-tabu/: Cargo.toml
optim-rust/knapsack-tabu/src/: main.rs
optim-rust/rastrigin-pso/: Cargo.toml  rast_test.ipynb
optim-rust/rastrigin-pso/src/: main.rs
optim-rust/src/: main.rs
optim-rust/tabu-tsp/src/: main.rs
optim-rust/ticket-pricing-genetic/: Cargo.toml  code_pyton_test.ipynb
optim-rust/ticket-pricing-genetic/src/: init.rs  init_sim.rs  main.rs  mutations.rs  recombinations.rs  selection.rs
optim-rust/tsp-tabu/: Cargo.toml
src/: handlers.rs  main.rs
