[package]
name = "ml-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
linfa = "0.7.0"
linfa-linear = "0.7.0"
polars = { version = "0.39.2", features = ["lazy"] }
pwhash = "1.0.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
socketioxide = "0.12.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
